# ama-agent

./: .gitignore  RELEASING.md  biome.json  components.json  index.html  package.json  tsconfig.node.json  vite.config.ts
.agent/rules/: design.md
.github/workflows/: release.yml
scripts/: README.md  dev-windows.js  dev-windows.ps1  dev-wsl.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FrequencyBarVisualizer.tsx  KeysConfigModal.tsx  SineWaveVisualizer.tsx  example.tsx
src/components/settings/: AISettings.tsx  AppearanceSettings.tsx  SettingsModal.tsx  index.ts
src/components/ui/: alert-dialog.tsx  combobox.tsx  dialog.tsx  dropdown-menu.tsx  orb.tsx  select.tsx  switch.tsx  tabs.tsx
src/lib/: audio-utils.ts  llm.ts  tts.ts  whisper.ts
