[package]
name = "desktop-audio-agent"
version = "0.1.0"
description = "Voice-to-LLM Desktop Agent"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_audio_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

